--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>imageZoom js lib</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
     <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"></script>
     <script src="src/imageZoom.js"></script>
-
+    <style>
+        body {
+            font-family: 'Roboto Condensed', sans-serif;
+        }
+    </style>
 </head>
 <body>
 <div style="text-align: center">
     <h1>imageZoom js lib example</h1>
     <p>You just need to add `zoom-js` class for your images</p>
     <br>
-    <h2></h2>
-    <div style="max-width: 640px;margin: auto">
+    <div style="max-width: 615px;margin: auto">
     <pre style="background-color: #eee;text-align: left;color: #555;size: 1em;padding: 10px;">
 &lt;!-- Thumbnails with link to big size image in data-attribute `data-fullsize` --&gt;
 &lt;img src="https://picsum.photos/260/180?image=1068"
@@ -26,37 +30,54 @@
 /&gt;</pre>
     </div>
     <p>
-        <img src="https://res.cloudinary.com/demo/image/upload/w_350,h_200,c_crop/sample.jpg"
+        <img src="https://picsum.photos/350/200?image=1044"
             class="zoom-js"
-            data-fullsize="https://www.cs.umd.edu/~aporter/Tmp/bee.jpg"
+            alt="Image from https://picsum.photos/"
+            data-fullsize="https://picsum.photos/1200/960?image=1044"
         />
         &nbsp;
-        <img src="https://picsum.photos/250/150?image=1073"
+        <img src="https://picsum.photos/250/200?image=1073"
             class="zoom-js"
-            data-fullsize="https://picsum.photos/900/600?image=1073"
+            data-fullsize="https://picsum.photos/1024/768?image=1073"
         />
     </p>
     <p>
-        <img src="https://picsum.photos/260/180?image=1068"
+        <img src="https://picsum.photos/270/260?image=743"
             class="zoom-js"
-            data-fullsize="https://picsum.photos/1024/768?image=1068"
+            data-fullsize="https://picsum.photos/1024/768?image=743"
         />
         &nbsp;
-        <img src="https://picsum.photos/320/260?image=1059"
+        <img src="https://picsum.photos/330/260?image=1059"
             class="zoom-js"
-            data-fullsize="https://picsum.photos/1600/1200?image=1059"
+            data-fullsize="https://picsum.photos/1024/768?image=1059"
+        />
+    </p>
+    <p>
+        <img src="https://picsum.photos/300/200?image=576"
+            class="zoom-js"
+            data-fullsize="https://picsum.photos/1024/768?image=576"
+        />
+        &nbsp;
+        <img src="https://picsum.photos/300/200?image=577"
+            class="zoom-js"
+            data-fullsize="https://picsum.photos/960/600?image=577"
         />
     </p>
     <br>
     <br>
-    <h2>Thumbnails without link to big size image</h2>
+    <div style="max-width: 615px;margin: auto">
+    <pre style="background-color: #eee;text-align: left;color: #555;size: 1em;padding: 10px;">
+&lt;!-- Thumbnails without link to big size image --&gt;
+&lt;img src="https://picsum.photos/260/180?image=1068"
+   class="zoom-js"
+/&gt;</pre>
+    </div>
     <p>
-        <img src="https://res.cloudinary.com/demo/image/upload/w_350,h_200,c_crop/sample.jpg"
+        <img src="https://picsum.photos/310/200?image=433"
              class="zoom-js"
-             style="width:300px;height:200px;"
         />
         &nbsp;
-        <img src="https://picsum.photos/250/150?image=1073"
+        <img src="https://picsum.photos/290/200?image=183"
              class="zoom-js"
          />
     </p>
