--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
     <br>
     <br>
     <br>
-    <br><br><br>
+    <br>
+    <br>
+    <a href="https://github.com/yevsikov/imageZoom">https://github.com/yevsikov/imageZoom</a>
+    <br>
 </div>
 
 
