--- a/index.html
+++ b/index.html
@@ -68,18 +68,21 @@
     <div style="max-width: 615px;margin: auto">
     <pre style="background-color: #eee;text-align: left;color: #555;size: 1em;padding: 10px;">
 &lt;!-- Thumbnails without link to big size image --&gt;
-&lt;img src="https://picsum.photos/260/180?image=1068"
-   class="zoom-js"
+&lt;img src="https://picsum.photos/600/400?image=1068"
+    class="zoom-js"
+    style="width:300px;height:200px"
 /&gt;</pre>
     </div>
     <p>
-        <img src="https://picsum.photos/310/200?image=433"
+        <img src="https://picsum.photos/620/400?image=433"
              class="zoom-js"
+             style="width:310px;height:200px"
         />
         &nbsp;
-        <img src="https://picsum.photos/290/200?image=183"
+        <img src="https://picsum.photos/580/400?image=183"
              class="zoom-js"
-         />
+             style="width:290px;height:200px"
+        />
     </p>
 
     <br>
