fix for small images

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
              style="width:290px;height:200px"
         />
     </p>
+    <p>
+        <img src="https://picsum.photos/610/200?image=694"
+             class="zoom-js"
+        />
+    </p>
 
     <br>
     <br>
