--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <h1>imageZoom js lib example</h1>
     <p>You just need to add `zoom-js` class for your images</p>
     <br>
-    <div style="max-width: 615px;margin: auto">
-    <pre style="background-color: #eee;text-align: left;color: #555;size: 1em;padding: 10px;">
+    <div style="max-width:615px;margin:auto">
+    <pre style="background-color:#eee;text-align:left;color:#555;font-size:0.9em;padding:10px;">
 &lt;!-- Thumbnails with link to big size image in data-attribute `data-fullsize` --&gt;
 &lt;img src="https://picsum.photos/260/180?image=1068"
    class="zoom-js"
@@ -65,8 +65,8 @@
     </p>
     <br>
     <br>
-    <div style="max-width: 615px;margin: auto">
-    <pre style="background-color: #eee;text-align: left;color: #555;size: 1em;padding: 10px;">
+    <div style="max-width:615px;margin:auto">
+    <pre style="background-color:#eee;text-align:left;color:#555;font-size:0.9em;padding:10px;">
 &lt;!-- Thumbnails without link to big size image --&gt;
 &lt;img src="https://picsum.photos/600/400?image=1068"
     class="zoom-js"
