--- a/index.html
+++ b/index.html
@@ -89,9 +89,16 @@
              class="zoom-js"
         />
     </p>
-
     <br>
     <br>
+    <div style="max-width:615px;margin:auto">
+        <pre style="background-color:#eee;text-align:left;color:#555;font-size:0.9em;padding:10px;">
+    &lt;!-- Wordpress example --&gt;
+    &lt;img src="&lt;?php echo get_the_post_thumbnail_url($post-&gt;ID,'thumbnail'); ?&gt;"
+        class="zoom-js"
+        data-fullsize="&lt;?php echo get_the_post_thumbnail_url($post-&gt;ID,'full'); ?&gt;"
+    /&gt;</pre>
+        </div>
     <br>
     <br>
     <br>
