--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 <div style="text-align: center">
     <h1>imageZoom js lib example</h1>
     <p>You just need to add `zoom-js` class for your images</p>
+    <p style="text-align:right;width:610px;margin:auto;font-size:0.8em;color:#999;">* required: jQuery</p>
     <br>
+    <br>
+    <p>Thumbnails with link to big size image in data-attribute `data-fullsize`</p>
     <div style="max-width:615px;margin:auto">
     <pre style="background-color:#eee;text-align:left;color:#555;font-size:0.9em;padding:10px;">
 &lt;!-- Thumbnails with link to big size image in data-attribute `data-fullsize` --&gt;
@@ -65,6 +68,7 @@
     </p>
     <br>
     <br>
+    <p>Thumbnails without link to big size image</p>
     <div style="max-width:615px;margin:auto">
     <pre style="background-color:#eee;text-align:left;color:#555;font-size:0.9em;padding:10px;">
 &lt;!-- Thumbnails without link to big size image --&gt;
@@ -91,14 +95,28 @@
     </p>
     <br>
     <br>
+    <p>Custom styles</p>
     <div style="max-width:615px;margin:auto">
         <pre style="background-color:#eee;text-align:left;color:#555;font-size:0.9em;padding:10px;">
-    &lt;!-- Wordpress example --&gt;
-    &lt;img src="&lt;?php echo get_the_post_thumbnail_url($post-&gt;ID,'thumbnail'); ?&gt;"
-        class="zoom-js"
-        data-fullsize="&lt;?php echo get_the_post_thumbnail_url($post-&gt;ID,'full'); ?&gt;"
-    /&gt;</pre>
-        </div>
+&lt;!-- Custom styles --&gt;
+&lt;style&gt;
+    #zoomedArea {
+        border: 2px solid black;
+        cursor: grab;
+    }
+&lt;/style&gt;</pre>
+    </div>
+    <br>
+    <br>
+    <p>Wordpress example</p>
+    <div style="max-width:615px;margin:auto">
+        <pre style="background-color:#eee;text-align:left;color:#555;font-size:0.9em;padding:10px;">
+&lt;!-- Wordpress example --&gt;
+&lt;img src="&lt;?php echo get_the_post_thumbnail_url($post-&gt;ID,'thumbnail'); ?&gt;"
+    class="zoom-js"
+    data-fullsize="&lt;?php echo get_the_post_thumbnail_url($post-&gt;ID,'full'); ?&gt;"
+/&gt;</pre>
+    </div>
     <br>
     <br>
     <br>
