--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
         body {
             font-family: 'Roboto Condensed', sans-serif;
         }
+        pre {
+            background-color: #eee;
+            text-align: left;
+            color: #555;
+            font-size: 0.9em;
+            padding: 10px;
+        }
+        .pre-wrapper {
+            max-width:615px;
+            margin:auto
+        }
+        .pre-comments {
+            color: #bbb;
+        }
     </style>
 </head>
 <body>
@@ -24,9 +38,9 @@
     <br>
     <br>
     <p>Thumbnails with link to big size image in data-attribute `data-fullsize`</p>
-    <div style="max-width:615px;margin:auto">
-    <pre style="background-color:#eee;text-align:left;color:#555;font-size:0.9em;padding:10px;">
-&lt;!-- Thumbnails with link to big size image in data-attribute `data-fullsize` --&gt;
+    <div class="pre-wrapper">
+    <pre>
+<span class="pre-comments">&lt;!-- Thumbnails with link to big size image in data-attribute `data-fullsize` --&gt;</span>
 &lt;img src="https://picsum.photos/260/180?image=1068"
    class="zoom-js"
    data-fullsize="https://picsum.photos/1024/768?image=1068"
@@ -71,9 +85,9 @@
     <br>
     <br>
     <p>Thumbnails without link to big size image</p>
-    <div style="max-width:615px;margin:auto">
-    <pre style="background-color:#eee;text-align:left;color:#555;font-size:0.9em;padding:10px;">
-&lt;!-- Thumbnails without link to big size image --&gt;
+    <div class="pre-wrapper">
+    <pre>
+<span class="pre-comments">&lt;!-- Thumbnails without link to big size image --&gt;</span>
 &lt;img src="https://picsum.photos/600/400?image=1068"
     class="zoom-js"
     style="width:300px;height:200px"
@@ -100,9 +114,9 @@
     <br>
     <br>
     <p>Custom styles</p>
-    <div style="max-width:615px;margin:auto">
-        <pre style="background-color:#eee;text-align:left;color:#555;font-size:0.9em;padding:10px;">
-&lt;!-- Custom styles --&gt;
+    <div class="pre-wrapper">
+        <pre>
+<span class="pre-comments">&lt;!-- Custom styles --&gt;</span>
 &lt;style&gt;
     #zoomedArea {
         border: 2px solid black;
@@ -113,9 +127,9 @@
     <br>
     <br>
     <p>Callback using</p>
-    <div style="max-width:615px;margin:auto">
-        <pre style="background-color:#eee;text-align:left;color:#555;font-size:0.9em;padding:10px;">
-&lt;!-- Callback using --&gt;
+    <div class="pre-wrapper">
+        <pre>
+<span class="pre-comments">&lt;!-- Callback using --&gt;</span>
 &lt;img src="https://picsum.photos/260/180?image=1068"
    class="zoom-js"
    data-fullsize="https://picsum.photos/1024/768?image=1068"
@@ -133,9 +147,9 @@
     <br>
     <br>
     <p>Wordpress example</p>
-    <div style="max-width:615px;margin:auto">
-        <pre style="background-color:#eee;text-align:left;color:#555;font-size:0.9em;padding:10px;">
-&lt;!-- Wordpress example --&gt;
+    <div class="pre-wrapper">
+        <pre>
+<span class="pre-comments">&lt;!-- Wordpress example --&gt;</span>
 &lt;img src="&lt;?php echo get_the_post_thumbnail_url($post-&gt;ID,'thumbnail'); ?&gt;"
     class="zoom-js"
     data-fullsize="&lt;?php echo get_the_post_thumbnail_url($post-&gt;ID,'full'); ?&gt;"
