--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         .pre-comments {
             color: #bbb;
         }
+        .pre-php {
+            color: #7c5490;;
+        }
+        a {
+            color: #555;
+        }
     </style>
 </head>
 <body>
@@ -150,9 +156,9 @@
     <div class="pre-wrapper">
         <pre>
 <span class="pre-comments">&lt;!-- Wordpress example --&gt;</span>
-&lt;img src="&lt;?php echo get_the_post_thumbnail_url($post-&gt;ID,'thumbnail'); ?&gt;"
+&lt;img src="<span class="pre-php">&lt;?php echo get_the_post_thumbnail_url($post-&gt;ID,'thumbnail'); ?&gt;</span>"
     class="zoom-js"
-    data-fullsize="&lt;?php echo get_the_post_thumbnail_url($post-&gt;ID,'full'); ?&gt;"
+    data-fullsize="<span class="pre-php">&lt;?php echo get_the_post_thumbnail_url($post-&gt;ID,'full'); ?&gt;</span>"
 /&gt;</pre>
     </div>
     <br>
