Replace position fuction by offset function

--- a/index.html
+++ b/index.html
@@ -127,8 +127,10 @@
     #zoomedArea {
         border: 2px solid black;
         cursor: grab;
+        z-index: 1000;
     }
-&lt;/style&gt;</pre>
+&lt;/style&gt;
+&lt;div id="zoomedArea"&gt;&lt;/div&gt;</pre>
     </div>
     <br>
     <br>
