Add setup description

--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
     <h1>imageZoom js lib example</h1>
     <p>You just need to add `zoom-js` class for your images</p>
     <p style="text-align:right;width:610px;margin:auto;font-size:0.8em;color:#999;">* required: jQuery</p>
+    <p>Setup</p>
+    <div class="pre-wrapper">
+        <pre>
+<span class="pre-comments">&lt;!-- Setup --&gt;</span>
+&lt;script&gt; src="//code.jquery.com/jquery-3.3.1.min.js"&gt;&lt;/script&gt;
+&lt;script&gt; src="src/imageZoom.js"&gt;&lt;/script&gt;</pre>
+    </div>
     <br>
     <br>
     <p>Thumbnails with link to big size image in data-attribute `data-fullsize`</p>
