Add download link

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             color: #555;
             font-size: 0.9em;
             padding: 10px;
+            overflow: auto;
         }
         .pre-wrapper {
             max-width:615px;
@@ -174,6 +175,9 @@
     <br>
     <br>
     <br>
+    <p>
+        <a href="https://raw.githubusercontent.com/yevsikov/imageZoom/master/src/imageZoom.js" download="imageZoom.js">Download</a>
+    </p>
     <br>
     <a href="https://github.com/yevsikov/imageZoom">https://github.com/yevsikov/imageZoom</a>
     <br>
