--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <br>
     <br>
     <p>
-        <a href="https://raw.githubusercontent.com/yevsikov/imageZoom/master/src/imageZoom.js" download="imageZoom.js">Download</a>
+        <a href="https://raw.githubusercontent.com/yevsikov/imageZoom/master/src/imageZoom.js" download="imageZoom.js" target="_blank">Download</a>
     </p>
     <br>
     <a href="https://github.com/yevsikov/imageZoom">https://github.com/yevsikov/imageZoom</a>
