Add margin settings

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         z-index: 1000;
     }
 &lt;/style&gt;
-&lt;div id="zoomedArea"&gt;&lt;/div&gt;</pre>
+&lt;div id="zoomedArea" data-margin="30"&gt;&lt;/div&gt;</pre>
     </div>
     <br>
     <br>
