--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <div class="pre-wrapper">
         <pre>
 <span class="pre-comments">&lt;!-- Setup --&gt;</span>
-&lt;script&gt; src="//code.jquery.com/jquery-3.3.1.min.js"&gt;&lt;/script&gt;
-&lt;script&gt; src="src/imageZoom.js"&gt;&lt;/script&gt;</pre>
+&lt;script src="//code.jquery.com/jquery-3.3.1.min.js"&gt;&lt;/script&gt;
+&lt;script src="src/imageZoom.js"&gt;&lt;/script&gt;</pre>
     </div>
     <br>
     <br>
